style.css
/* ... */
.index-page .how-it-works-section .how-right .steps .each-step {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  margin-bottom: 1em;
  margin-top: 1em;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-image {
  margin-right: 0.5em;
  max-width: 100px;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-image img {
  width: 100%;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-text {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  margin-top: 0.5em;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-text .step-header {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-size: 1.4em;
  font-weight: 500;
  color: #303778;
  margin-bottom: 0.3em;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-text .step-header .step-number {
  margin-left: 0.5em;
  width: 30px;
  height: 30px;
  color: white;
  background: #303778;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 0;
  /* do not grow   - initial value: 0 */
  flex-shrink: 0;
  /* do not shrink - initial value: 1 */
  flex-basis: 30px;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-text h1 {
  font-size: 1.4rem;
  margin-bottom: 0.5em;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-text .step-description {
  font-size: 1.2em;
}
.index-page .how-it-works-section .how-right .steps .each-step .step-text .step-description h1 {
  text-align: left;
  font-size: 1.1em;
  margin: 0;
}
.index-page .how-it-works-section .how-right .steps .each-step:last-child {
  margin-right: 0;
}
.index-page .how-it-works-section .how-right .check-faq {
  margin: 0 auto;
  margin-top: 2em;
}

.index-page .redeem-stats {
  background:white;
  padding-top: 3em;
  padding-bottom: 3em;
  display:flex;
  align-items: center;
}

.index-page .redeem-stats .redeem-stats-header{
  color: #505798;
  font-weight: 600;
  font-size: 40px;
  line-height: 48px;
  padding-bottom: 1em;
}

.index-page .redeem-stats .redeem-stats-example {
  padding-bottom: 4em;
}
.index-page .redeem-stats .redeem-stats-example .redeem-stats-fig-head {
  font-weight: 600;
  font-size: 28px;
  line-height: 36px;
  color: #2F3476;
}

.index-page .redeem-stats .redeem-stats-example .metric{
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  color: #48494B;
  }
.index-page .faq-section {
  padding-top: 8em;
  padding-bottom: 5em;
  width: 100%;
  background:#505798;
}

.index-page .faq-section {
  display: flex;
  justify-content: center;
  align-items: center;
}

.index-page .faq-section .container .row .col-12{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top:1em;
  margin-bottom: 1em;
}
.index-page .faq-section .container .row .col-12 .faq-img{
  position: static;
  width: 110.12px;
  height: 110.12px;
  display: flex;
  align-items: center;
  }
  .index-page .faq-section .container .row .faq-header{
    font-weight: 600;
    font-size: 40px;
    line-height: 48px;
    color: #F6F7FA;
    text-align: center;
  }
  
.index-page .faq-section .container .row .faq-element{
    font-size: 25px ;
    color: #F6F7FA ;
    text-align: center;
}

.legal-privacy-page .product-header-container,
.legal-tou-page .product-header-container {
  background: #303778;
}
.legal-privacy-page .product-header-container .container .row .header-right nav ul li a,
.legal-tou-page .product-header-container .container .row .header-right nav ul li a {
  color: white;
}

.faq-page .product-header-container {
  background: #303778;
}
.faq-page .product-header-container .container .row .header-right nav ul li a {
  color: white;
}

.button-blue a {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px 16px;
  color: #FFFFFF;
  position: static;
  left: 0%;
  right: 0%;
  top: 0%;
  bottom: 0%;
  /* Standard/White */
  border: 1px solid #FFFFFF;
  box-sizing: border-box;
  border-radius: 4px;
}

.button-blue a:hover{
  background:#FFFFFF;
  color: #505798;
  border: 1px solid #505798;
  box-sizing: border-box;
  border-radius: 4px;
}
.button-back {
  background: none;
}
.button-back a {
  display: flex;
  justify-content: center;
  align-items: center;
  background: none;
  font-weight: 500;
  color: #303778;
}
.button-back a img {
  width: 15px;
  margin-right: 0.5em;
}

.button-back a:hover {
  text-decoration: underline;
}

